--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.19",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4"
   }
 }
